objects/HS_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Know_how_to_prepare_for_interviews_both__c</fullName>
        <inlineHelpText>How much, if at all, do you feel today&apos;s workshop has helped you to know how to prepare for interviews both physically and mentally</inlineHelpText>
        <label>Prepare for interviews</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Know_how_to_talk_about_your_volunteering__c</fullName>
        <inlineHelpText>How much, if at all, do you feel today&apos;s workshop has helped you to know how to talk about your volunteering and other experiences to demonstrate you have the skills for the job</inlineHelpText>
        <label>Know how to talk about your volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Know_what_makes_good_CV__c</fullName>
        <inlineHelpText>Please rate how confident you are of these statements.I know what makes a good CV?</inlineHelpText>
        <label>Know what makes good CV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not very confident</fullName>
                </value>
                <value>
                    <fullName>Not confident at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Know_what_makes_good_application__c</fullName>
        <inlineHelpText>Please rate how confident you are of these statements.I know what makes a good application?</inlineHelpText>
        <label>Know what makes good application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very confident</fullName>
                </value>
                <value>
                    <fullName>Confident, not sure</fullName>
                </value>
                <value>
                    <fullName>Not very confident</fullName>
                </value>
                <value>
                    <fullName>Not confident at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadership__c</fullName>
        <inlineHelpText>How good would you say you are at the following? Please rate from 1 to 10 where 10: Excellent and 1: very poor</inlineHelpText>
        <label>Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likely_to_get_skilled_job__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Likely to get skilled job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not confident at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likely_to_recommend_workshop__c</fullName>
        <inlineHelpText>How likely are you to recommend attending the Kick Off and Workshop One to other young people?</inlineHelpText>
        <label>Likely to recommend workshop?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Quite likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely nor unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logging_your_volunteer_hours__c</fullName>
        <inlineHelpText>On a scale of 1 to 10 where 10 = excellent and 1 = very poor how would you rate how well the Kick Off has improved your understanding of:</inlineHelpText>
        <label>Logging your volunteer hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_reasons_for_attending__c</fullName>
        <inlineHelpText>Please tell us your main reasons for attending</inlineHelpText>
        <label>Main reasons for attending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_important_thing_learnt_at_workshop__c</fullName>
        <inlineHelpText>What do you feel was the most important thing you learnt at the workshop and why?</inlineHelpText>
        <label>Most important thing learnt at workshop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_people_are_generally_trustworthy__c</fullName>
        <inlineHelpText>How strongly do you agree with these statements? Most people are generally trustworthy</inlineHelpText>
        <label>Most people are generally trustworthy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_YP__c</fullName>
        <formula>HS_Activity__r.Name_of_YP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of YP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_skills__c</fullName>
        <inlineHelpText>How good would you say you are at the following? Please rate from 1 to 10 where 10: Excellent and 1: very poor</inlineHelpText>
        <label>Organisation skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Part_time_seasonal_job__c</fullName>
        <inlineHelpText>Do you currently have a part time or seasonal job?</inlineHelpText>
        <label>Other Part time seasonal job?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_time_or_a_seasonal_job_Comments__c</fullName>
        <inlineHelpText>Part_time_or_a_seasonal_job_Comments</inlineHelpText>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_time_or_seasonal_job__c</fullName>
        <inlineHelpText>Do you currently have a part time or a seasonal job?</inlineHelpText>
        <label>Part time or seasonal job</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People_are_trustworthy__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>People are trustworthy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People_from_a_poorer_background__c</fullName>
        <label>People from a poorer background</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Somewhat rarely</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Somewhat often</fullName>
                </value>
                <value>
                    <fullName>Often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People_from_a_richer_background__c</fullName>
        <label>People from a richer background</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Somewhat rarely</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Somewhat often</fullName>
                </value>
                <value>
                    <fullName>Often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>People_with_disabilities__c</fullName>
        <label>People with disabilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Somewhat rarely</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Somewhat often</fullName>
                </value>
                <value>
                    <fullName>Often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepared_for_further_education__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Prepared for  further education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not confident at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepared_for_work__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Prepared for work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_in_an_interview__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Presentation in an interview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Volunteer_Hours__c</fullName>
        <description>Prior to the NCS programme, had you ever volunteered before?</description>
        <inlineHelpText>Prior to the NCS programme, had you ever volunteered</inlineHelpText>
        <label>Previous Volunteer Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, several times a week</fullName>
                </value>
                <value>
                    <fullName>Yes, once a week</fullName>
                </value>
                <value>
                    <fullName>Yes, a few times a month</fullName>
                </value>
                <value>
                    <fullName>Yes, once a month</fullName>
                </value>
                <value>
                    <fullName>Yes, less often</fullName>
                </value>
                <value>
                    <fullName>No, never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_for_volunteering__c</fullName>
        <inlineHelpText>What are your main reasons for volunteering?</inlineHelpText>
        <label>Reasons for volunteering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To give something back</fullName>
                </value>
                <value>
                    <fullName>To help others/improve things</fullName>
                </value>
                <value>
                    <fullName>To have fun</fullName>
                </value>
                <value>
                    <fullName>To develop skills for work</fullName>
                </value>
                <value>
                    <fullName>To gain experience for work</fullName>
                </value>
                <value>
                    <fullName>To meet new people/make new friends</fullName>
                </value>
                <value>
                    <fullName>To be part of something</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_this__c</fullName>
        <inlineHelpText>How likely are you to recommend this workshop to other young people?</inlineHelpText>
        <label>Recommend this  workshop to young people</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Quite likely</fullName>
                </value>
                <value>
                    <fullName>Neither likely nor unlikely</fullName>
                </value>
                <value>
                    <fullName>Quite unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_to_a_friend__c</fullName>
        <inlineHelpText>Based on your experience, how likely are you to recommend HeadStart to a friend?</inlineHelpText>
        <label>Recommend to a friend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_with_my_life__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Responsible with my life</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_I_have_relevant__c</fullName>
        <inlineHelpText>Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Skills I have relevant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speak_clearly_to_emp_about_skills__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Speak clearly to emp about skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stay_involved_with_the_challenge__c</fullName>
        <inlineHelpText>How much, if at all, has your experience with HeadStart helped you stay invloved with the challenge?</inlineHelpText>
        <label>Stay involved with the challenge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Batch__c</fullName>
        <label>Survey Batch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_elderly__c</fullName>
        <label>The elderly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Somewhat rarely</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Somewhat often</fullName>
                </value>
                <value>
                    <fullName>Often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_my_actions_I_am_able_to_influenc__c</fullName>
        <inlineHelpText>Through my actions I am able to influence decisions that affect my local area</inlineHelpText>
        <label>Through my actions I am able influence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_with_People_Different__c</fullName>
        <inlineHelpText>How much would you say you currently spend time with people who are different to you
(either by age, ethnicity or income)? Please rate from 1 to 10 where 10: All the time and 1: 
Never</inlineHelpText>
        <label>Time with People Different</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_those_different_to_me__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Trust those different to me</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understand_Where_diff_people_coming_from__c</fullName>
        <inlineHelpText>13.	How strongly do you agree with these statements? Please rate from 1 to 10 where 10: highest and 1: Lowest</inlineHelpText>
        <label>Understand Where diff people coming from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understand__c</fullName>
        <inlineHelpText>Understand why good quality customer service is important to employers</inlineHelpText>
        <label>Understand why good CS is important</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helped a lot</fullName>
                </value>
                <value>
                    <fullName>Helped a little</fullName>
                </value>
                <value>
                    <fullName>Not helped at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understand_main_skills__c</fullName>
        <inlineHelpText>10.	Please rate how confident you are of these statements. confident/ very confident/ not sure/Not very confident/not at all</inlineHelpText>
        <label>Understand main skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Confident</fullName>
                </value>
                <value>
                    <fullName>Confident</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Not Very Confident</fullName>
                </value>
                <value>
                    <fullName>Not at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>